[package]
name = "dino"
description = "A clone of the game Dino from Chrome using Bevy Engine"
authors = ["Henry Barreto <me@henrybarreto.dev>"]
version = "0.1.0"
license = "MIT"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy_prototype_debug_lines = "0.10"
bevy-inspector-egui = "0.18.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
